--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,4 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -67,10 +61,11 @@
 
 .grid {
   display: flex;
-  align-items: center;
+  align-items: end;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 1000px;
+  width: 100%e;
 }
 
 .card {
